# protein-align

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/input/: db  query  query_big
data/output/: data.txt  notes.txt
data/test/align/: q0  q1  q4
data/test/auto/: db0  db1  db2  db3  db4  q2  q3
data/test/manual/: db_small  query_all_upper  test1  test2
data/test/parser/: empty  query_all_lower  query_multiline
include/: alignCPU.h  alignGPU.cuh  alignParasail.h  blosum62.h  interAlignGPU.cuh  intraAlignGPU.cuh  naiveInterGPU.cuh  nw_cpu.h  nw_gpu.cuh  nw_parasail.h  params.h  parse.h  sw_cpu.h  sw_gpu.cuh  sw_parasail.h
results/: exp1.csv  experiment_1.csv  experiment_2.csv  experiment_3.csv  experiment_4.csv  experiment_5.csv  experiment_6.csv  experiment_7.csv
scripts/: experiment_1.py  experiment_2.py  experiment_3.py  experiment_4.py  experiment_5.py  experiment_6.py  experiment_7.py  generate_benchmark.py  generate_database.py  generate_subset.py  generate_tests.py  plot.py  run_and_plot.py  sort_database.py
src/: alignCPU.cpp  alignGPU.cu  alignGPUOptimised.cu  alignParasail.cpp  benchmark.cpp  benchmark_nw.cpp  benchmark_sw.cpp  interAlignGPU.cu  intraAlignGPU.cu  main.cpp  naiveInterGPU.cu  parse.cpp  sw_cpu.cpp  sw_gpu.cu
src/nw/: nw_cpu.cpp  nw_parasail.cpp
src/nw_variants/: nw_baseline.cu
src/old_nw_variants/: nw_coalesced.cu  nw_optimised.cu
src/old_sw_variants/: sw_baseline.cu  sw_optimised.cu
src/sw/: constant_memory.cu  low_memory.cu  register_caching.cu  shared_memory.cu  sw_cpu.cpp  sw_parasail.cpp
test/: test_cpu.cpp  test_gpu.cpp  test_nw.cpp  test_parse.cpp  test_parser.cpp  test_sw.cpp
